--- a/Mini-Project-1/index.html
+++ b/Mini-Project-1/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="navbar">
+        <a href="" id="logo">amazon.in</a>
+        <a href="" >Account</a>
+        <a href="" >My Cart</a>
+        <a href="" >Contact Us</a>
+            <input type="text" placeholder="search amazon.in">
+            <button>Search</button>
+    </div>
+    </header>
+    <div id="content">
+        <div class="content-box" style="background-color: rgba(255, 0, 0, 0.5);"></div>
+        <div class="content-box" style="background-color: rgba(0, 255, 0, 0.5);"></div>
+        <div class="content-box" style="background-color: rgba(0, 0, 255, 0.5);"></div>
+    </div>
+    <footer>
+        Made with &hearts; by SadiaKhaliq <br>
+        @2024 All rights reserved.
+    </footer>
 </body>
 </html>
